--- a/front/src/app/bank/history/history.component.html
+++ b/front/src/app/bank/history/history.component.html
@@ -7,35 +7,35 @@
         <hr class="my-2">
       </div>
       <div class="col-sm-12">
-        <form action="" method="post">
-          <div class="row">
+        <!--<form action="" method="post">-->
+          <!--<div class="row">-->
 
-            <div class="col-sm-4">
-              <mat-form-field>
-                <input matInput [matDatepicker]="picker1" placeholder="Transakcje od" [formControl]="date">
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
-              </mat-form-field>
-            </div>
+            <!--<div class="col-sm-4">-->
+              <!--<mat-form-field>-->
+                <!--<input matInput [matDatepicker]="picker1" placeholder="Transakcje od" [formControl]="date">-->
+                <!--<mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>-->
+                <!--<mat-datepicker #picker1></mat-datepicker>-->
+              <!--</mat-form-field>-->
+            <!--</div>-->
 
-            <div class="col-sm-4">
-              <mat-form-field>
-                <input matInput [matDatepicker]="picker2" placeholder="Transakcje do"
-                       [formControl]="serializedDate">
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
-              </mat-form-field>
-            </div>
+            <!--<div class="col-sm-4">-->
+              <!--<mat-form-field>-->
+                <!--<input matInput [matDatepicker]="picker2" placeholder="Transakcje do"-->
+                       <!--[formControl]="serializedDate">-->
+                <!--<mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>-->
+                <!--<mat-datepicker #picker2></mat-datepicker>-->
+              <!--</mat-form-field>-->
+            <!--</div>-->
 
-            <div class="col-sm-4">
-              <div class="md-form">
-                <input mdbActive type="text" id="form61" class="form-control">
-                <label for="form61" class="">Szukaj</label>
-              </div>
-            </div>
+            <!--<div class="col-sm-4">-->
+              <!--<div class="md-form">-->
+                <!--<input mdbActive type="text" id="form61" class="form-control">-->
+                <!--<label for="form61" class="">Szukaj</label>-->
+              <!--</div>-->
+            <!--</div>-->
 
-          </div>
-        </form>
+          <!--</div>-->
+        <!--</form>-->
       </div>
 
       <div class="col-sm-12">
