--- a/front/src/app/bank/my-finances/my-finances.component.html
+++ b/front/src/app/bank/my-finances/my-finances.component.html
@@ -1,14 +1,14 @@
-<div class="container-fluid">
+<div class="container">
   <div class="col-sm-12">
-    <div class="jumbotron">
-      <div class="col-sm-12">
+
+      <div class="col-sm-12 header-act">
         <h1 class="h1-responsive font-weight-bold">Konto Direct</h1>
         <p class="lead">00 0000 0000 0000 0000 0000 0000</p>
         <hr class="my-2">
       </div>
       <div class="col-sm-5">
         <br>
-        <ul class="list-group">
+        <ul class="list-group header-balance">
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Saldo dostepne:
             <span class="font-weight-bold badge-pill">500,00 zł</span>
@@ -18,9 +18,7 @@
             <span class="font-weight-bold badge-pill">500,00 zł</span>
           </li>
         </ul>
-        <br>
-        <br>
-        <br>
+
         <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Nazwa konta:
@@ -40,7 +38,7 @@
           </li>
         </ul>
       </div>
-    </div>
+
   </div>
 </div>
 
