--- a/front/src/app/bank/register/register.component.scss
+++ b/front/src/app/bank/register/register.component.scss
@@ -3,3 +3,43 @@
   margin: auto;
   margin-top: 50px;
 }
+
+
+.vertical-center {
+  margin-top: 80px;
+  align-items: center;
+}
+
+.text{
+  display: block!important;
+  text-align: center;
+}
+
+
+.unique-text{
+  color:#880e4f;
+}
+
+.unique-text.active{
+  color: #880e4f!important;
+}
+.md-form label{
+  color: #880e4f!important;
+}
+
+input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search-md]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.md-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #880e4f;
+  box-shadow: 0 1px 0 0 #880e4f;
+}
+
+.error-message{
+  margin-bottom: 0px!important;
+  margin-top: 2px;
+  margin-left: 48px;
+  color: red;
+  font-size: 13px;
+}
+
+.margin-small{
+  margin-bottom: 15px;
+}
