--- a/front/src/app/bank/settings/settings.component.html
+++ b/front/src/app/bank/settings/settings.component.html
@@ -1,32 +1,63 @@
-<div class="container-fluid">
+<div class="container">
+  <div class="row header-act">
+    <div class="col-sm-12">
 
-     <div class="jumbotron marginUp">
-      <form action="POST">
-        <div class="settingsContainer">
-          <div class="row">
-            <h1>Ustawienia konta</h1>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <mat-form-field>
-                <input matInput placeholder="Imię" required>
-              </mat-form-field>
-              <mat-form-field>
-                <input matInput placeholder="Nazwisko" required>
-              </mat-form-field>
-              <mat-form-field>
-                <input matInput placeholder="Adres" required>
-              </mat-form-field>
-              <mat-form-field >
-                <input class="halfWidth" matInput placeholder="Ulica" required>
-              </mat-form-field>
-              <mat-form-field >
-                <input class="halfWidth" matInput placeholder="Miasto" required>
-              </mat-form-field>
-            </div>
-          </div>
+      <h2 class="h3-responsive font-weight-bold">Ustawienia konta</h2>
+
+      <div class="row">
+
+        <div class="col-sm-6">
+
+
+          <mat-form-field>
+            <input matInput placeholder="Imię" disabled>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Nazwisko" disabled>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput placeholder="Adres" disabled>
+          </mat-form-field>
+          <mat-form-field>
+            <input class="halfWidth" matInput placeholder="Telefon" required>
+          </mat-form-field>
+          <mat-form-field>
+            <input class="halfWidth" matInput placeholder="Email" required>
+          </mat-form-field>
+
+          <button value="submit" class=" btn btn-unique waves-light" mdbRippleRadius>Blokuj konto</button>
+
         </div>
-      </form>
-    </div>
-</div>
 
+
+        <div class="col-sm-6">
+
+
+          <mat-form-field>
+            <input matInput placeholder="Pesel" disabled>
+          </mat-form-field>
+          <mat-form-field>
+            <input type="number" matInput placeholder="Limit dzienny" required>
+          </mat-form-field>
+          <mat-form-field>
+            <input type="number" matInput placeholder="Limit Miesieczny" required>
+          </mat-form-field>
+          <mat-form-field>
+            <input class="halfWidth" matInput placeholder="Zmiana hasla" required>
+          </mat-form-field>
+          <mat-form-field>
+            <input class="halfWidth" matInput placeholder="Powtorz haslo" required>
+          </mat-form-field>
+
+          <button type="submit" value="submit" class=" btn btn-unique waves-light" mdbRippleRadius>Zapisz ustawienia
+          </button>
+
+        </div>
+
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
