--- a/front/src/app/bank/new-transaction/new-transaction.component.scss
+++ b/front/src/app/bank/new-transaction/new-transaction.component.scss
@@ -12,3 +12,28 @@
 .marginUp {
   margin-top: 50px;
 }
+
+.header-act{
+  margin-top: 25px;
+}
+
+.mat-form-field {
+  width: 100%;
+}
+
+
+.unique-text{
+  color:#880e4f;
+}
+
+.unique-text.active{
+  color: #880e4f!important;
+}
+.md-form label{
+  color: #880e4f!important;
+}
+
+input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search-md]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.md-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #880e4f;
+  box-shadow: 0 1px 0 0 #880e4f;
+}
